Removed extraneous parts, added in all existing items, bibliography, intro

--- a/css/ie-lte-7.css
+++ b/css/ie-lte-7.css
@@ -1,3 +1,2 @@
 .ex2-3-4 pre {	text-align: center;
-}.ex2-3-4 pre span {	text-align: left;	display: inline-block;	white-space: pre;
-	font-family: georgia, "lucida bright", "times new roman", serif;}
+}.ex2-3-4 pre span {	text-align: left;	display: inline-block;	white-space: pre;}
