Improve the appearance of abbr on Chrome/Mac.
Fixes #28.

--- a/css/screen.css
+++ b/css/screen.css
@@ -26,6 +26,10 @@ abbr, acronym, .caps {
 	border-bottom: 0;
 }
 
+abbr {
+	text-underline-position: under;
+}
+
 blockquote abbr, blockquote acronym, blockquote .caps,
 em abbr, em acronym, em .caps,
 cite abbr, cite acronym, cite .caps {
